--- a/case-view/assessment-alternate.html
+++ b/case-view/assessment-alternate.html
@@ -202,104 +202,104 @@ title: EHC Hub
        <div class="mb-5">
          <h4>About me</h4>
          <p>This section is about what is important to the child or young person. Where possible, this section should be completed by the child or young person themselves. Where support has been given or where it has been completed on behalf of the child or young person, it should be made clear in each section whether the child has directly quoted the statements or if they have been summarised. The content from this section will later be included in Section A of the EHC Plan if the local authority decide to issue one.</p>
-          <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4">
+         <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-6 about-me text-center">
 
-            <div class="col">
-              <div class="card h-100">
-                <div class="card-img-top bg-success-50 p-2">
-                  <img src="/assets/images/about_1.png" class="img-about" alt="Cartooon canvas on easel">
-                </div>
-                <div class="card-body">
-                  <p class="card-text">Things that are important to me</p>
-                  <a href="#">Open</a>
-                </div>
-              </div>
-            </div>
+           <div class="col">
+             <a href="#">
+               <div class="card h-100">
+                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_1.png" alt="Decorative gradient image"></span>
+                 <div class="card-body">
+                   <p class="card-text">Things that are important to me</p>
+                   <p class="card-text text-muted"><small>Views missing<i class="fal fa-times ms-1"></i></small></p>
+                 </div>
+               </div>
+              </a>
+           </div>
 
-            <div class="col">
-              <div class="card h-100">
-                <div class="card-img-top bg-success-50 p-2">
-                  <img src="/assets/images/about_2.png" class="img-about" alt="Cartooon canvas on easel">
-                </div>
-                <div class="card-body">
-                  <p class="card-text">Things that are working well at home and school</p>
-                  <a href="#">Open</a>
-                </div>
-              </div>
-            </div>
+           <div class="col">
+             <a href="#">
+               <div class="card h-100">
+                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_2.png" alt="Decorative gradient image"></span>
+                 <div class="card-body">
+                   <p class="card-text">Things that are working well at home and school</p>
+                   <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
+                 </div>
+               </div>
+              </a>
+           </div>
 
-            <div class="col">
-              <div class="card h-100">
-                <div class="card-img-top bg-success-50 p-2">
-                  <img src="/assets/images/about_3.png" class="img-about" alt="Cartooon canvas on easel">
-                </div>
-                <div class="card-body">
-                  <p class="card-text">Other information I think is important to know about me</p>
-                  <a href="#">Open</a>
-                </div>
-              </div>
-            </div>
+           <div class="col">
+             <a href="#">
+               <div class="card h-100">
+                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_3.png" alt="Decorative gradient image"></span>
+                 <div class="card-body">
+                   <p class="card-text">Other information I think is important to know about me</p>
+                   <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
+                 </div>
+               </div>
+              </a>
+           </div>
 
-            <div class="col">
-              <div class="card h-100">
-                <div class="card-img-top bg-success-50 p-2">
-                  <img src="/assets/images/about_4.png" class="img-about" alt="Cartooon canvas on easel">
-                </div>
-                <div class="card-body">
-                  <p class="card-text">Important things to know about my past</p>
-                  <a href="#">Open</a>
-                </div>
-              </div>
-            </div>
+           <div class="col">
+             <a href="#">
+               <div class="card h-100">
+                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_4.png" alt="Decorative gradient image"></span>
+                 <div class="card-body">
+                   <p class="card-text">Important things to know about my past</p>
+                   <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
+                 </div>
+               </div>
+              </a>
+           </div>
 
-            <div class="col">
-              <div class="card h-100">
-                <div class="card-img-top bg-success-50 p-2">
-                  <img src="/assets/images/about_5.png" class="img-about" alt="Cartooon canvas on easel">
-                </div>
-                <div class="card-body">
-                  <p class="card-text">Things that I enjoy doing</p>
-                  <a href="#">Open</a>
-                </div>
-              </div>
-            </div>
+           <div class="col">
+             <a href="#">
+               <div class="card h-100">
+                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_5.png" alt="Decorative gradient image"></span>
+                 <div class="card-body">
+                   <p class="card-text">Things I enjoy doing</p>
+                   <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
+                 </div>
+               </div>
+              </a>
+           </div>
 
-            <div class="col">
-              <div class="card h-100">
-                <div class="card-img-top bg-success-50 p-2">
-                  <img src="/assets/images/about_6.png" class="img-about" alt="Cartooon canvas on easel">
-                </div>
-                <div class="card-body">
-                  <p class="card-text">How to communicate with me</p>
-                  <a href="#">Open</a>
-                </div>
-              </div>
-            </div>
+           <div class="col">
+             <a href="#">
+               <div class="card h-100">
+                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_6.png" alt="Decorative gradient image"></span>
+                 <div class="card-body">
+                   <p class="card-text">How to communicate with me</p>
+                   <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
+                 </div>
+               </div>
+              </a>
+           </div>
 
-            <div class="col">
-              <div class="card h-100">
-                <div class="card-img-top bg-success-50 px-2 pt-2">
-                  <img src="/assets/images/about_7.png" class="img-about" alt="Cartooon canvas on easel">
-                </div>
-                <div class="card-body">
-                  <p class="card-text">My hope, dreams and aspirations for the future</p>
-                  <a href="#">Open</a>
-                </div>
-              </div>
-            </div>
+           <div class="col">
+             <a href="#">
+               <div class="card h-100">
+                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_7.png" alt="Decorative gradient image"></span>
+                 <div class="card-body">
+                   <p class="card-text">My hopes, dreams and aspirations for the future</p>
+                   <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
+                 </div>
+               </div>
+              </a>
+           </div>
 
-            <div class="col">
-              <div class="card h-100">
-                <div class="card-img-top bg-success-50 p-2">
-                  <img src="/assets/images/about_8.png" class="img-about" alt="Cartooon canvas on easel">
-                </div>
-                <div class="card-body">
-                  <p class="card-text">Things I would like to change at home and at school</p>
-                  <a href="#">Open</a>
-                </div>
-              </div>
-            </div>
-          </div>
+           <div class="col">
+             <a href="#">
+               <div class="card h-100">
+                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_8.png" alt="Decorative gradient image"></span>
+                 <div class="card-body">
+                   <p class="card-text">Things I would like to change at home and school</p>
+                   <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
+                 </div>
+               </div>
+              </a>
+           </div>
+         </div>
         </div>
 
         <!-- Parent/carer views -->
@@ -307,68 +307,67 @@ title: EHC Hub
           <h4>Parent/carer's views</h4>
           <p>This section is for the child or young person’s parents/carers to give their views. The content from this section will later be included in Section A of the EHC Plan if the local authority decide to issue one.</p>
 
-          <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4">
+          <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-6 about-me text-center">
 
             <div class="col">
-              <div class="card h-100">
-                <div class="card-img-top bg-warning-100 p-2">
-                  <img src="/assets/images/parent_1.png" class="img-about" alt="Cartooon canvas on easel">
+              <a href="#">
+                <div class="card h-100">
+                  <span class="bg-warning-50"><img class="mx-auto" src="/assets/images/parent_1.png" alt="Decorative gradient image"></span>
+                  <div class="card-body">
+                    <p class="card-text">Important things to know about our family history</p>
+                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
+                  </div>
                 </div>
-                <div class="card-body">
-                  <p class="card-text">Things that are important to me</p>
-                  <a href="#">Open</a>
-                </div>
-              </div>
+               </a>
             </div>
 
             <div class="col">
-              <div class="card h-100">
-                <div class="card-img-top bg-warning-100 p-2">
-                  <img src="/assets/images/parent_2.png" class="img-about" alt="Cartooon canvas on easel">
+              <a href="#">
+                <div class="card h-100">
+                  <span class="bg-warning-50"><img class="mx-auto" src="/assets/images/parent_2.png" alt="Decorative gradient image"></span>
+                  <div class="card-body">
+                    <p class="card-text">Things that are working well at home and school</p>
+                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
+                  </div>
                 </div>
-                <div class="card-body">
-                  <p class="card-text">Things that are working well at home and school</p>
-                  <a href="#">Open</a>
-                </div>
-              </div>
+               </a>
             </div>
 
             <div class="col">
-              <div class="card h-100">
-                <div class="card-img-top bg-warning-100 p-2">
-                  <img src="/assets/images/parent_3.png" class="img-about" alt="Cartooon canvas on easel">
+              <a href="#">
+                <div class="card h-100">
+                  <span class="bg-warning-50"><img class="mx-auto" src="/assets/images/parent_3.png" alt="Decorative gradient image"></span>
+                  <div class="card-body">
+                    <p class="card-text">Things that are not working well and we would like to change</p>
+                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
+                  </div>
                 </div>
-                <div class="card-body">
-                  <p class="card-text">Other information I think is important to know about me</p>
-                  <a href="#">Open</a>
-                </div>
-              </div>
+               </a>
             </div>
 
             <div class="col">
-              <div class="card h-100">
-                <div class="card-img-top bg-warning-100 p-2">
-                  <img src="/assets/images/parent_4.png" class="img-about" alt="Cartooon canvas on easel">
+              <a href="#">
+                <div class="card h-100">
+                  <span class="bg-warning-50"><img class="mx-auto" src="/assets/images/parent_4.png" alt="Decorative gradient image"></span>
+                  <div class="card-body">
+                    <p class="card-text">Our hopes and aspirations for the future</p>
+                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
+                  </div>
                 </div>
-                <div class="card-body">
-                  <p class="card-text">Important things to know about my past</p>
-                  <a href="#">Open</a>
-                </div>
-              </div>
+               </a>
             </div>
 
             <div class="col">
-              <div class="card h-100">
-                <div class="card-img-top bg-warning-100 p-2">
-                  <img src="/assets/images/parent_5.png" class="img-about" alt="Cartooon canvas on easel">
+              <a href="#">
+                <div class="card h-100">
+                  <span class="bg-warning-50"><img class="mx-auto" src="/assets/images/parent_5.png" alt="Decorative gradient image"></span>
+                  <div class="card-body">
+                    <p class="card-text">Other information we think is important</p>
+                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
+                  </div>
                 </div>
-                <div class="card-body">
-                  <p class="card-text">Things that I enjoy doing</p>
-                  <a href="#">Open</a>
-                </div>
-              </div>
+               </a>
             </div>
-
           </div>
         </div>
 
