--- a/summary/index.html
+++ b/summary/index.html
@@ -62,14 +62,14 @@ title: Case summary
                     </ul>
                   </div>
                 </div>
-                <span class="badge text-bg-secondary my-2">4 plans</span>
+                <span class="badge rounded-pill text-bg-success my-2">Active</span>
                 <p class="card-text">All plans stored on the hub in chronological order.</p>
               </div>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <div class="d-flex justify-content-between">
                     <div>
-                      <span class="text-muted"><small>Plan</small></span><br>
+                      <span class="text-muted"><small>Current</small></span><br>
                       <a href="#">Amended</a>
                     </div>
                     <div class="text-end">
@@ -81,19 +81,19 @@ title: Case summary
                 <li class="list-group-item">
                   <div class="d-flex justify-content-between">
                     <div>
-                      <span class="text-muted"><small>Plan</small></span><br>
-                      <a href="#">Amended</a>
+                      <span class="text-muted"><small>Previous</small></span><br>
+                      <a href="#">EHCP</a>
                     </div>
                     <div class="text-end">
                       <span class="text-muted"><small>Issued</small></span><br>
-                      1 Jan 2024
+                      31 Feb 2023
                     </div>
                   </div>
                 </li>
                 <li class="list-group-item">
                   <div class="d-flex justify-content-between">
                     <div>
-                      <span class="text-muted"><small>Plan</small></span><br>
+                      <span class="text-muted"><small>First</small></span><br>
                       <a href="#">EHCP</a>
                     </div>
                     <div class="text-end">
@@ -104,7 +104,7 @@ title: Case summary
                 </li>
               </ul>
               <div class="card-footer">
-                <a href="#" class="card-link"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>View more</a>
+                <a href="#" class="card-link"><i class="fal fa-history me-2" aria-hidden="true"></i>View history</a>
               </div>
             </div>
           </div>
@@ -132,7 +132,7 @@ title: Case summary
                     </ul>
                   </div>
                 </div>
-                <span class="badge text-bg-warning my-2">Not started</span>
+                <span class="badge rounded-pill text-bg-warning my-2">Not started</span>
                 <p class="card-text">Reviewing outomes agreed in the EHC Plan.</p>
               </div>
               <ul class="list-group list-group-flush">
@@ -174,7 +174,7 @@ title: Case summary
                 </li>
               </ul>
               <div class="card-footer">
-                <a href="#" class="card-link"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>View more</a>
+                <a href="#" class="card-link"><i class="fal fa-history me-2" aria-hidden="true"></i>View history</a>
               </div>
             </div>
           </div>
@@ -198,7 +198,7 @@ title: Case summary
                     </ul>
                   </div>
                 </div>
-                <span class="badge text-bg-success my-2">Pathway completed</span>
+                <span class="badge rounded-pill text-bg-success my-2">Pathway completed</span>
                 <p class="card-text">The needs assessment and planning pathway.</p>
               </div>
               <ul class="list-group list-group-flush">
@@ -264,7 +264,7 @@ title: Case summary
                     </ul>
                   </div>
                 </div>
-                <span class="badge text-bg-success my-2">1 new</span>
+                <span class="badge rounded-pill text-bg-success my-2">1 new</span>
                 <p class="card-text">Letters containing important information.</p>
               </div>
               <ul class="list-group list-group-flush">
@@ -329,7 +329,7 @@ title: Case summary
                     </ul>
                   </div>
                 </div>
-                <span class="badge text-bg-secondary my-2 me-1">2 Mediation</span><span class="badge text-bg-secondary my-2">1 Tribunal</span>
+                <span class="badge rounded-pill text-bg-secondary my-2 me-1">2 Mediation</span><span class="badge rounded-pill text-bg-secondary my-2">1 Tribunal</span>
                 <p class="card-text">A chronology of mediation and tribunal activity.</p>
               </div>
               <ul class="list-group list-group-flush">
