--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -43,7 +43,7 @@ title: Work tray
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 9</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Highfield Academy">Highfield Academy</span></td>
-                     <td><span class="badge rounded-pill text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="A needs assessment is in progress.">Assessment</span></td>
+                     <td><span class="badge rounded-pill text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="EHC needs assessment in progress">Assessment</span></td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell"></td>
@@ -54,7 +54,7 @@ title: Work tray
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 4</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Oak Junior School">Oak Junior School</span></td>
-                     <td><span class="badge rounded-pill text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="A decision whether to assess is pending.">Assessment decision</span></td>
+                     <td><span class="badge rounded-pill text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="Awaiting a decision to issue an EHC Plan or not">EHCP Decision</span></td>
                      <td class="d-none d-md-table-cell">14/01/2023</td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">
@@ -71,7 +71,7 @@ title: Work tray
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 2</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="St Mary's Primary">St Mary's Primary</span></td>
-                     <td><span class="badge rounded-pill text-neutral-600 bg-warning-100 w-100" data-bs-toggle="tooltip" data-bs-title="A proposed amendment outside review is being drafted.">Amending EHCP</span></td>
+                     <td><span class="badge rounded-pill text-neutral-600 bg-warning-100 w-100" data-bs-toggle="tooltip" data-bs-title="A proposed amendment to the EHCP (outside of review) is being drafted">Draft Amend</span></td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell"></td>
@@ -82,7 +82,7 @@ title: Work tray
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 13</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Greenhill School">Greenhill School</span></td>
-                     <td><span class="badge rounded-pill text-neutral-600 bg-error-100 w-100" data-bs-toggle="tooltip" data-bs-title="A review meeting has been arranged and views are being gathered.">Review arranged</span></td>
+                     <td><span class="badge rounded-pill text-neutral-600 bg-error-100 w-100" data-bs-toggle="tooltip" data-bs-title="A review meeting has been arranged and views are requested">Review Arranged</span></td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">
@@ -97,7 +97,7 @@ title: Work tray
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 11</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Greenhill School">Greenhill School</span></td>
-                     <td><span class="badge rounded-pill text-neutral-600 bg-error-100 w-100" data-bs-toggle="tooltip" data-bs-title="A review report is being drafted.">Review report</span></td>
+                     <td><span class="badge rounded-pill text-neutral-600 bg-error-100 w-100" data-bs-toggle="tooltip" data-bs-title="A review report in progress">Review Report</span></td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell"></td>
