--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -78,7 +78,7 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/teenager at college.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Chandler"></td>
-                     <td class="table-name-label"><a href="/summary">Tate, Chandler</a></td>
+                     <td class="table-name-label"><a href="/case-view">Tate, Chandler</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 13</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Greenhill School">Greenhill School</span></td>
