--- a/case-view/timeline.html
+++ b/case-view/timeline.html
@@ -8,173 +8,185 @@ title: EHC Hub
 
   {% include sidenav.html %}
 
-
-  <div class="d-flex d-md-none justify-content-between align-items-start idx-border-b mt-3 px-6 pb-2">
-    <h1 class="mb-0 fs-2 no-border">Ellery Holden</h1>
-    <a class="d-block d-md-none align-self-center" role="button" data-bs-toggle="collapse" href="#idx-sidenav-case" aria-controls="idx-sidenav-case" aria-expanded="false" aria-label="Toggle navigation">
-      <!-- <span class="visually-hidden">Case side menu</span> -->
-      Details
-      <!-- <i class="fal fa-info-circle fs-2 text-neutral-600"></i> -->
-      <i class="fal fa-angle-down ms-1 text-neutral-600"></i>
-    </a>
-  </div>
-
-  {% include sidenav-case.html %}
-
-  <main id="content" class="main container-fluid mt-6 px-6 px-lg-8">
-    <div class="row gx-5 gy-2 px-xl-5">
+  <main id="content" class="main container-fluid mt-5 px-6 px-lg-8 table-no-case">
+    <div class="row">
       <div class="col">
 
-        <h1>Timeline</h1>
-        <p>The timleine includes case activity in chronological order, including by whom and when. Case notes can also be added by the Case Co-ordinator.</p>
+        {% include case-details.html %}
 
-        <ul class="timeline my-5 fa-ul">
-          <li>
-            <span class="fa-li"><i class="fa fa-circle"></i></span>
-            <div class="card">
+        <hr>
 
-              <ul class="list-group list-group-flush">
+        <div class="d-flex flex-column flex-md-row justify-content-md-between text-neutral-600">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb mb-0">
+              <li class="breadcrumb-item"><a href="/case-view">Case home</a></li>
+              <li class="breadcrumb-item"><a href="/case-view/assessment">Assessment</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Timeline</li>
+            </ol>
+          </nav>
+          <p class="mb-0"></p>
+        </div>
 
-                <li class="list-group-item timeline-header d-flex justify-content-between">
-                  <span class="flex-grow-1">Max Schneider</span>
-                  <a href="#" title="Remove case note"><i class="fal fa-trash-alt text-neutral-500 me-2"></i></a>
-                  <span class="badge text-bg-success  me-2">Note</span>
-                  <span>12 Jul 2023 11:49</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between">
-                  Phone call today at 9:50am with SENDIASS to discuss options to support Ellery's family through this process. Agreed action is for SENDIASS representative to meet with Shane Holden on Friday at the school.
-                </li>
-              </ul>
-            </div>
-          </li>
+        <!-- Callout -->
+        <div class="callout callout-info mb-0">
+          <h3>Timeline</h3>
+          <p>The timeline includes case activity in chronological order, including by whom and when. Case notes can also be added by the Case Co-ordinator.</p>
+        </div>
 
-          <li>
-            <span class="fa-li"><i class="fa fa-circle"></i></span>
-            <div class="card">
+        {% include actions-timeline.html %}
 
-              <ul class="list-group list-group-flush">
+        <div class="card mb-5">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item timeline-header d-flex justify-content-between">
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <a href="#" title="Remove case note"><i class="fal fa-trash-alt text-neutral-500 me-2"></i></a>
+                <span class="badge rounded-pill text-dark bg-success-300 me-2">Note</span>
+              </div>
+            </li>
+            <li class="list-group-item">
+              Phone call today at 9:50am with SENDIASS to discuss options to support Ellery's family through this process. Agreed action is for SENDIASS representative to meet with Shane Holden on Friday at the school.
+              <p><a href="#">SENDIAS-agreement-signed.pdf</a></p>
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
+            </li>
+          </ul>
+        </div>
 
-                <li class="list-group-item timeline-header d-flex justify-content-between">
-                  <span class="flex-grow-1">Max Schneider</span>
-                  <span class="badge text-bg-primary  me-2">System</span>
-                  <span>12 Jul 2023 11:49</span>
-                </li>
-                <li class="list-group-item">
-                  Max Schneider was assigned as a Co-ordinator.
-                </li>
-              </ul>
-            </div>
-          </li>
 
-          <li>
-            <span class="fa-li"><i class="fa fa-circle"></i></span>
-            <div class="card">
+        <div class="card mb-5">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item timeline-header d-flex justify-content-between">
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <span class="badge rounded-pill text-dark bg-secondary-300 me-2">System</span>
+              </div>
+            </li>
+            <li class="list-group-item">
+              Max Schneider was assigned as a Co-ordinator.
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
+            </li>
+          </ul>
+        </div>
 
-              <ul class="list-group list-group-flush">
+        <div class="card mb-5">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item timeline-header d-flex justify-content-between">
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <span class="badge rounded-pill text-dark bg-secondary-300 me-2">System</span>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <p>Reverted Ellery's case to the Plan Decision stage.</p>
+              <p>
+                <strong>Reason:</strong> Correct a mistake.<br>
+                <strong>Supporting comment:</strong> Incorrect decision published and family informed.
+              </p>
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
+            </li>
+          </ul>
+        </div>
 
-                <li class="list-group-item timeline-header d-flex justify-content-between">
-                  <span class="flex-grow-1">Max Schneider</span>
-                  <span class="badge text-bg-primary  me-2">System</span>
-                  <span>12 Jul 2023 11:49</span>
-                </li>
-                <li class="list-group-item">
-                  <p>Reverted Ellery's case to the Plan Decision stage.</p>
-                  <p>
-                    <strong>Reason:</strong> Correct a mistake.<br>
-                    <strong>Supporting comment:</strong> Incorrect decision published and family informed.
-                  </p>
-                </li>
-              </ul>
-            </div>
-          </li>
+        <div class="card mb-5">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item timeline-header d-flex justify-content-between">
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <span class="badge rounded-pill text-dark bg-secondary-300 me-2">System</span>
+              </div>
+            </li>
+            <li class="list-group-item">
+              Updated Ellery's details.
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
+            </li>
+          </ul>
+        </div>
 
-          <li>
-            <span class="fa-li"><i class="fa fa-circle"></i></span>
-            <div class="card">
+        <div class="card mb-5">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item timeline-header d-flex justify-content-between">
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <span class="badge rounded-pill text-dark bg-secondary-300 me-2">System</span>
+              </div>
+            </li>
+            <li class="list-group-item">
+              Requested information ahead of a review meeting from Educational Psychology Team. A notification email was sent to <a href="mailto:inbox@educational-psychcology.org">inbox@educational-psychcology.org</a>
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
+            </li>
+          </ul>
+        </div>
 
-              <ul class="list-group list-group-flush">
+        <div class="card mb-5">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item timeline-header d-flex justify-content-between">
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <span class="badge rounded-pill text-dark bg-secondary-300 me-2">System</span>
+              </div>
+            </li>
+            <li class="list-group-item">
+              Invited Helen Glass to a review meeting. A notification email was sent to <a href="mailto:helen.glass@example.com">helen.glass@example.com</a>
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
+            </li>
+          </ul>
+        </div>
 
-                <li class="list-group-item timeline-header d-flex justify-content-between">
-                  <span class="flex-grow-1">Max Schneider</span>
-                  <span class="badge text-bg-primary  me-2">System</span>
-                  <span>12 Jul 2023 11:49</span>
-                </li>
-                <li class="list-group-item">
-                  Updated Ellery's details.
-                </li>
-              </ul>
-            </div>
-          </li>
+        <div class="card mb-5">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item timeline-header d-flex justify-content-between">
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <span class="badge rounded-pill text-dark bg-secondary-300 me-2">System</span>
+              </div>
+            </li>
+            <li class="list-group-item">
+              Started a review of Ellery's EHC Plan.
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
+            </li>
+          </ul>
+        </div>
 
-          <li>
-            <span class="fa-li"><i class="fa fa-circle"></i></span>
-            <div class="card">
-              <ul class="list-group list-group-flush">
+        <div class="card mb-5">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item timeline-header d-flex justify-content-between">
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <span class="badge rounded-pill text-dark bg-secondary-300 me-2">System</span>
+              </div>
+            </li>
+            <li class="list-group-item">
+              Imported Ellery's EHC Plan.
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
+            </li>
+          </ul>
+        </div>
 
-                <li class="list-group-item timeline-header d-flex justify-content-between">
-                  <span class="flex-grow-1">Max Schneider</span>
-                  <span class="badge text-bg-primary  me-2">System</span>
-                  <span>12 Jul 2023 11:49</span>
-                </li>
-                <li class="list-group-item">
-                  Requested information ahead of a review meeting from Educational Psychology Team. A notification email was sent to <a href="mailto:inbox@educational-psychcology.org">inbox@educational-psychcology.org</a>
-                </li>
-              </ul>
-            </div>
-          </li>
-
-          <li>
-            <span class="fa-li"><i class="fa fa-circle"></i></span>
-            <div class="card">
-              <ul class="list-group list-group-flush">
-
-                <li class="list-group-item timeline-header d-flex justify-content-between">
-                  <span class="flex-grow-1">Max Schneider</span>
-                  <span class="badge text-bg-primary  me-2">System</span>
-                  <span>12 Jul 2023 11:49</span>
-                </li>
-                <li class="list-group-item">
-                  Invited Helen Glass to a review meeting. A notification email was sent to <a href="mailto:helen.glass@example.com">helen.glass@example.com</a>
-                </li>
-              </ul>
-            </div>
-          </li>
-
-          <li>
-            <span class="fa-li"><i class="fa fa-circle"></i></span>
-            <div class="card">
-              <ul class="list-group list-group-flush">
-
-                <li class="list-group-item timeline-header d-flex justify-content-between">
-                  <span class="flex-grow-1">Max Schneider</span>
-                  <span class="badge text-bg-primary  me-2">System</span>
-                  <span>12 Jul 2023 11:49</span>
-                </li>
-                <li class="list-group-item">
-                  Started a review of Ellery's EHC Plan.
-                </li>
-              </ul>
-            </div>
-          </li>
-
-          <li>
-            <span class="fa-li"><i class="fa fa-circle"></i></span>
-            <div class="card">
-              <ul class="list-group list-group-flush">
-
-                <li class="list-group-item timeline-header d-flex justify-content-between">
-                  <span class="flex-grow-1">Max Schneider</span>
-                  <span class="badge text-bg-primary  me-2">System</span>
-                  <span>12 Jul 2023 11:49</span>
-                </li>
-                <li class="list-group-item">
-                  Imported Ellery's EHC Plan.
-                </li>
-              </ul>
-            </div>
-          </li>
-
-        </ul>
+        <nav aria-label="Results navigation">
+           <ul class="pagination justify-content-center my-5">
+             <li class="page-item active"><a class="page-link" href="#">1</a></li>
+             <li class="page-item"><a class="page-link" href="#">2</a></li>
+             <li class="page-item"><a class="page-link" href="#">3</a></li>
+             <li class="page-item"><a class="page-link" href="#"><i class="fal fa-chevron-right"></i></a></li>
+             <li class="page-item"><a class="page-link" href="#"><i class="fal fa-chevron-double-right"></i></a></li>
+           </ul>
+         </nav>
 
       </div>
     </div>
