updated advice page

--- a/case-view/advice.html
+++ b/case-view/advice.html
@@ -92,6 +92,8 @@ title: EHC Hub
                     <div id="input2Help" class="form-text">This will give greater context to your response for Chandler, their parent/carers and other professionals. This is saved in your profile should you wish to update it for future advice requests.</div>
                   </div>
                 </form>
+              </div>
+              <div class="card-footer d-flex justify-content-end">
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" value="" id="checkDefault">
                   <label class="form-check-label" for="checkDefault">
@@ -105,7 +107,7 @@ title: EHC Hub
               <div class="card-header">
                 <div class="d-flex justify-content-between">
                   <span>Background</span>
-                  <span class="text-success no-wrap">Complete<i class="fal fa-check-circle ms-1"></i></span>
+                  <span class="text-danger no-wrap">Incomplete<i class="fal fa-exclamation-circle ms-1"></i></span>
                 </div>
               </div>
               <div class="card-body px-6">
@@ -129,9 +131,11 @@ title: EHC Hub
                   <label for="exampleFormControlTextarea5" class="form-label">What has been the effect of any support or strategies already put in place by your organisation?</label>
                   <textarea class="form-control" id="exampleFormControlTextarea5" rows="3"></textarea>
                 </div>
+              </div>
+              <div class="card-footer d-flex justify-content-end">
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="" id="checkChecked" checked>
-                  <label class="form-check-label" for="checkChecked">
+                  <input class="form-check-input" type="checkbox" value="" id="checkDefault">
+                  <label class="form-check-label" for="checkDefault">
                     Section complete
                   </label>
                 </div>
@@ -206,7 +210,7 @@ title: EHC Hub
                 </div>
                 <a class="btn btn-neutral-50 me-2 mt-2" href="#"><i class="fal fa-plus-circle me-2"></i>Add provision</a>
               </div>
-              <div class="card-footer">
+              <div class="card-footer d-flex justify-content-end">
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" value="" id="checkDefault">
                   <label class="form-check-label" for="checkDefault">
@@ -236,6 +240,8 @@ title: EHC Hub
                   </div>
                   <a href="#"><small>Clear selection</small></a>
                 </div>
+              </div>
+              <div class="card-footer d-flex justify-content-end">
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" value="" id="checkDefault" checked>
                   <label class="form-check-label" for="checkDefault">
@@ -265,6 +271,8 @@ title: EHC Hub
                   </div>
                   <a href="#"><small>Clear selection</small></a>
                 </div>
+              </div>
+              <div class="card-footer d-flex justify-content-end">
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" value="" id="checkDefault" checked>
                   <label class="form-check-label" for="checkDefault">
@@ -294,6 +302,8 @@ title: EHC Hub
                   </div>
                   <a href="#"><small>Clear selection</small></a>
                 </div>
+              </div>
+              <div class="card-footer d-flex justify-content-end">
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" value="" id="checkDefault" checked>
                   <label class="form-check-label" for="checkDefault">
@@ -323,6 +333,8 @@ title: EHC Hub
                   </div>
                   <a href="#"><small>Clear selection</small></a>
                 </div>
+              </div>
+              <div class="card-footer d-flex justify-content-end">
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" value="" id="checkDefault" checked>
                   <label class="form-check-label" for="checkDefault">
@@ -352,6 +364,8 @@ title: EHC Hub
                   </div>
                   <a href="#"><small>Clear selection</small></a>
                 </div>
+              </div>
+              <div class="card-footer d-flex justify-content-end">
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" value="" id="checkDefault" checked>
                   <label class="form-check-label" for="checkDefault">
@@ -371,6 +385,8 @@ title: EHC Hub
               <div class="card-body px-6">
                 <p class="card-text callout callout-info">Upload any additional documents which may evidence your advice.</p>
                 <p class="card-text">...</p>
+              </div>
+              <div class="card-footer d-flex justify-content-end">
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" value="" id="checkDefault" checked>
                   <label class="form-check-label" for="checkDefault">
