--- a/case-view/advice.html
+++ b/case-view/advice.html
@@ -60,11 +60,11 @@ title: EHC Hub
           <!-- Advice form -->
           <div class="col-lg-10" data-bs-spy="scroll" data-bs-target="#toc-advice" data-bs-offset="80" class="toc-scrollspy" tabindex="0">
 
-            <div class="card mb-4 toc-anchor" id="response-details">
+            <div class="card mb-6 toc-anchor" id="response-details">
               <div class="card-header">
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                   <span>Response Details</span>
-                  <span class="text-danger no-wrap">Incomplete<i class="fal fa-exclamation-circle ms-1"></i></span>
+                  <span class="badge rounded-pill text-bg-danger">Incomplete</span>
                 </div>
               </div>
               <div class="card-body px-6">
@@ -103,11 +103,11 @@ title: EHC Hub
               </div>
             </div>
 
-            <div class="card mb-4 toc-anchor" id="background">
+            <div class="card mb-6 toc-anchor" id="background">
               <div class="card-header">
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                   <span>Background</span>
-                  <span class="text-danger no-wrap">Incomplete<i class="fal fa-exclamation-circle ms-1"></i></span>
+                  <span class="badge rounded-pill text-bg-danger">Incomplete</span>
                 </div>
               </div>
               <div class="card-body px-6">
@@ -142,16 +142,16 @@ title: EHC Hub
               </div>
             </div>
 
-            <div class="card mb-4 toc-anchor" id="cai">
+            <div class="card mb-6 toc-anchor" id="cai">
               <div class="card-header">
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                   <span>Communication and Interaction</span>
-                  <span class="text-danger no-wrap">Incomplete<i class="fal fa-exclamation-circle ms-1"></i></span>
+                  <span class="badge rounded-pill text-bg-danger">Incomplete</span>
                 </div>
               </div>
               <div class="card-body px-6">
                 <div class="mb-5">
-                  <p class="required fw-500">Is there an identified learning need in this area?</p>
+                  <p class="required fw-500">Are you identifying a learning need in this area?</p>
                   <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="inlineRadio3" value="option1" checked>
                     <label class="form-check-label" for="inlineRadio3">Yes</label>
@@ -220,16 +220,16 @@ title: EHC Hub
               </div>
             </div>
 
-            <div class="card mb-4 toc-anchor" id="cal">
+            <div class="card mb-6 toc-anchor" id="cal">
               <div class="card-header">
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                   <span>Cognition and Learning</span>
-                  <span class="text-success no-wrap">Complete<i class="fal fa-check-circle ms-1"></i></span>
+                  <span class="badge rounded-pill text-bg-success">Complete</span>
                 </div>
               </div>
               <div class="card-body px-6">
                 <div class="mb-5">
-                  <p class="required fw-500">Is there an identified learning need in this area?</p>
+                  <p class="required fw-500">Are you identifying a learning need in this area?</p>
                   <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions5" id="inlineRadio5" value="option1">
                     <label class="form-check-label" for="inlineRadio5">Yes</label>
@@ -251,16 +251,16 @@ title: EHC Hub
               </div>
             </div>
 
-            <div class="card mb-4 toc-anchor" id="semh">
+            <div class="card mb-6 toc-anchor" id="semh">
               <div class="card-header">
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                   <span>Social, Emotional and Mental Health</span>
-                  <span class="text-success no-wrap">Complete<i class="fal fa-check-circle ms-1"></i></span>
+                  <span class="badge rounded-pill text-bg-success">Complete</span>
                 </div>
               </div>
               <div class="card-body px-6">
                 <div class="mb-5">
-                  <p class="required fw-500">Is there an identified learning need in this area?</p>
+                  <p class="required fw-500">Are you identifying a learning need in this area?</p>
                   <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions7" id="inlineRadio7" value="option1">
                     <label class="form-check-label" for="inlineRadio7">Yes</label>
@@ -282,16 +282,16 @@ title: EHC Hub
               </div>
             </div>
 
-            <div class="card mb-4 toc-anchor" id="sph">
+            <div class="card mb-6 toc-anchor" id="sph">
               <div class="card-header">
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                   <span>Sensory and/or Physical Health</span>
-                  <span class="text-success no-wrap">Complete<i class="fal fa-check-circle ms-1"></i></span>
+                  <span class="badge rounded-pill text-bg-success">Complete</span>
                 </div>
               </div>
               <div class="card-body px-6">
                 <div class="mb-5">
-                  <p class="required fw-500">Is there an identified learning need in this area?</p>
+                  <p class="required fw-500">Are you identifying a learning need in this area?</p>
                   <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions9" id="inlineRadio9" value="option1">
                     <label class="form-check-label" for="inlineRadio9">Yes</label>
@@ -313,16 +313,16 @@ title: EHC Hub
               </div>
             </div>
 
-            <div class="card mb-4 toc-anchor" id="health">
+            <div class="card mb-6 toc-anchor" id="health">
               <div class="card-header">
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                   <span>Health</span>
-                  <span class="text-success no-wrap">Complete<i class="fal fa-check-circle ms-1"></i></span>
+                  <span class="badge rounded-pill text-bg-success">Complete</span>
                 </div>
               </div>
               <div class="card-body px-6">
                 <div class="mb-5">
-                  <p class="required fw-500">Is there an identified learning need in this area?</p>
+                  <p class="required fw-500">Are you identifying a learning need in this area?</p>
                   <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions11" id="inlineRadio11" value="option1">
                     <label class="form-check-label" for="inlineRadio11">Yes</label>
@@ -344,16 +344,16 @@ title: EHC Hub
               </div>
             </div>
 
-            <div class="card mb-4 toc-anchor" id="sc">
+            <div class="card mb-6 toc-anchor" id="sc">
               <div class="card-header">
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                   <span>Social Care</span>
-                  <span class="text-success no-wrap">Complete<i class="fal fa-check-circle ms-1"></i></span>
+                  <span class="badge rounded-pill text-bg-success">Complete</span>
                 </div>
               </div>
               <div class="card-body px-6">
                 <div class="mb-5">
-                  <p class="required fw-500">Is there an identified learning need in this area?</p>
+                  <p class="required fw-500">Are you identifying a learning need in this area?</p>
                   <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions13" id="inlineRadio13" value="option1">
                     <label class="form-check-label" for="inlineRadio13">Yes</label>
@@ -375,11 +375,11 @@ title: EHC Hub
               </div>
             </div>
 
-            <div class="card mb-4 toc-anchor" id="documents">
+            <div class="card mb-6 toc-anchor" id="documents">
               <div class="card-header">
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                   <span>Documents</span>
-                  <span class="text-success no-wrap">Complete<i class="fal fa-check-circle ms-1"></i></span>
+                  <span class="badge rounded-pill text-bg-success">Complete</span>
                 </div>
               </div>
               <div class="card-body px-6">
